# atlanta-crm-v2

./: .gitignore  MIGRATION_NOTES.md  OPERATIONAL_CHECKLIST.md  README.md  migrate_column_types.sql  package.json  vercel.json
backend/: .env.example  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  admin.py  allowances.py  auth.py  billing.py  cashflow.py  cashflow_audit.py  clients.py  dashboard.py  debug.py  expenses.py  inventory.py  payments.py  settings.py  sync.py  users.py
backend/app/application/: __init__.py  contracts.py  services.py
backend/app/core/: __init__.py  auth.py  cache.py  cashflow_sheet_sync.py  config.py  dashboard_metrics.py  dashboard_sheet_sync.py  debtors.py  financial_events.py  financial_integrity.py  financials.py  google_sheets_auth.py  logging_config.py  metrics_refresh.py  operational_validation.py  payments_engine.py  rbac.py  service_normalization.py  settings.py  sheets_import_sync.py  workers.py
backend/app/db/: supabase_client.py
backend/app/domain/: __init__.py  blueprint.py
backend/app/presentation/: __init__.py  api.py
backend/tests/: test_api.py
data/: INVENTORY-3.xlsx  STOCK-3.xlsx
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
scripts/: .env.example  db_backup.sh  import_inventory_from_excel.py  import_services_from_excel.py  import_sheets.py  migrate_supabase_readonly.py  run_phase2_staging.sh  run_staging_transaction_stress.sh  test_login.py  verify_system.py  (+1 more)
(+75 files in other folders)
